Fix text with icon component overflow

--- a/app/routes/bdb/components/bdb.css
+++ b/app/routes/bdb/components/bdb.css
@@ -49,11 +49,6 @@
   color: var(--color-gray-7);
 }
 
-.companyInfo {
-  min-width: 180px;
-  min-height: 21px;
-}
-
 .mainContent {
   gap: var(--spacing-md);
 }
